--- a/login/assets/css/Grafica.css
+++ b/login/assets/css/Grafica.css
@@ -1,3 +1,9 @@
+/* =========================================================================
+ * Hoja: Grafica.css
+ * Qué hace: 
+ * Fecha: 06/12/2025
+ * ======================================================================= */
+
 .col-md-6{padding:1em; text-align:center}
 
 .Grafica{
