--- a/login/assets/css/comisiones.css
+++ b/login/assets/css/comisiones.css
@@ -1,3 +1,9 @@
+/* =========================================================================
+ * Hoja: comisiones.css
+ * Qué hace: 
+ * Fecha: 06/12/2025
+ * ======================================================================= */
+
 * {
   box-sizing: border-box;
 }
