--- a/login/assets/css/cupones.css
+++ b/login/assets/css/cupones.css
@@ -1,3 +1,9 @@
+/* =========================================================================
+ * Hoja: cupones.css
+ * Qué hace: 
+ * Fecha: 06/12/2025
+ * ======================================================================= */
+
 /*Estilo general de el contenedor de cupones*/
 .ContCupon img{
     /* height: 200px; */
