--- a/login/assets/css/diasfestivos.css
+++ b/login/assets/css/diasfestivos.css
@@ -1,3 +1,9 @@
+/* =========================================================================
+ * Hoja: diasfestivos.css
+ * Qué hace: 
+ * Fecha: 06/12/2025
+ * ======================================================================= */
+
 .center {
     margin: auto;
     width: 30%;
